production/litellm.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
  namespace: litellm
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      name: web
      port: 4000
      targetPort: 4000
  type: ClusterIP
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  namespace: litellm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm-container
          image: ghcr.io/berriai/litellm:main-v1.35.31
          imagePullPolicy: "IfNotPresent"
          args:
            - "--config"
            - "/app/proxy_server_config.yaml"
          volumeMounts: 
            - name: config-volume
              mountPath: /app/proxy_server_config.yaml
              subPath: config.yaml
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config
