production/ingress-litellm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: aws-llm-gw
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # dmz vpc sg
    alb.ingress.kubernetes.io/security-groups: sg-02d97e9f3c828685d
    alb.ingress.kubernetes.io/healthcheck-port: http
    alb.ingress.kubernetes.io/healthcheck-port: '4000'
    alb.ingress.kubernetes.io/healthcheck-path: /health/liveliness
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/tags: auto-delete=no
  name: ingress-litellm
  namespace: litellm
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /chat/completions
        pathType: Exact
        backend:
          service:
            name: litellm-service
            port:
              name: web
      - path: /embeddings
        pathType: Exact
        backend:
          service:
            name: litellm-service
            port:
              name: web
